# youtube-knowledge-pipeline

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  auto_capture.py  config.example.json  creators.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: sample_meta.json  sample_transcript.srt
src/: batch.py  fetch.py  youtube_to_source.py
